<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/show_first_layer_gdpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_first_layer_gdpr" />

    <Button
        android:id="@+id/show_second_layer_gdpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_second_layer_gdpr" />

    <Button
        android:id="@+id/show_first_layer_tcf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_first_layer_tcf" />

    <Button
        android:id="@+id/show_second_layer_tcf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_second_layer_tcf" />

    <Button
        android:id="@+id/show_first_layer_ccpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_first_layer_ccpa" />

    <Button
        android:id="@+id/show_second_layer_ccpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_second_layer_ccpa" />
</LinearLayout>
